--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
@@ -1,12 +1,12 @@
 object FormTrainCommander: TFormTrainCommander
-  Left = 417
+  Left = 225
   Height = 565
-  Top = 119
-  Width = 897
+  Top = 134
+  Width = 965
   Align = alBottom
   Caption = 'Train Commander'
   ClientHeight = 565
-  ClientWidth = 897
+  ClientWidth = 965
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
   OnDestroy = FormDestroy
@@ -16,10 +16,10 @@ object FormTrainCommander: TFormTrainCommander
     Left = 0
     Height = 120
     Top = 0
-    Width = 897
+    Width = 965
     Align = alTop
     ClientHeight = 120
-    ClientWidth = 897
+    ClientWidth = 965
     TabOrder = 0
     object CheckBoxAutoConnect: TCheckBox
       Left = 192
@@ -165,21 +165,37 @@ object FormTrainCommander: TFormTrainCommander
       OnClick = ButtonHTTPServerClick
       TabOrder = 11
     end
+    object Label1: TLabel
+      Left = 686
+      Height = 16
+      Top = 49
+      Width = 112
+      Caption = 'AliasServer Count:'
+      ParentColor = False
+    end
+    object LabelAliasServerCount: TLabel
+      Left = 808
+      Height = 16
+      Top = 48
+      Width = 8
+      Caption = '0'
+      ParentColor = False
+    end
   end
   object PanelConnections: TPanel
     Left = 0
     Height = 102
     Top = 445
-    Width = 897
+    Width = 965
     Align = alBottom
     ClientHeight = 102
-    ClientWidth = 897
+    ClientWidth = 965
     TabOrder = 1
     object ListviewConnections: TListView
       Left = 1
       Height = 100
       Top = 1
-      Width = 895
+      Width = 963
       Align = alClient
       Columns = <      
         item
@@ -198,7 +214,7 @@ object FormTrainCommander: TFormTrainCommander
     Left = 0
     Height = 9
     Top = 337
-    Width = 897
+    Width = 965
     Align = alBottom
     ResizeAnchor = akBottom
   end
@@ -212,7 +228,7 @@ object FormTrainCommander: TFormTrainCommander
     Left = 0
     Height = 18
     Top = 547
-    Width = 897
+    Width = 965
     Panels = <    
       item
         Width = 350
@@ -274,7 +290,7 @@ object FormTrainCommander: TFormTrainCommander
     Left = 216
     Height = 217
     Top = 120
-    Width = 681
+    Width = 749
     Align = alClient
     Lines.Strings = (    )
     ScrollBars = ssVertical
@@ -284,7 +300,7 @@ object FormTrainCommander: TFormTrainCommander
     Left = 0
     Height = 90
     Top = 346
-    Width = 897
+    Width = 965
     Align = alBottom
     Lines.Strings = (
       'MemoComPort'
@@ -297,7 +313,7 @@ object FormTrainCommander: TFormTrainCommander
     Left = 0
     Height = 9
     Top = 436
-    Width = 897
+    Width = 965
     Align = alBottom
     ResizeAnchor = akBottom
   end
@@ -1335,7 +1351,7 @@ object FormTrainCommander: TFormTrainCommander
   object TimerIncomingMessagePump: TTimer
     Interval = 1
     OnTimer = TimerIncomingMessagePumpTimer
-    Left = 696
-    Top = 40
+    Left = 568
+    Top = 32
   end
 end
