--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
@@ -181,6 +181,15 @@ object FormTrainCommander: TFormTrainCommander
       Caption = '0'
       ParentColor = False
     end
+    object CheckBox1: TCheckBox
+      Left = 384
+      Height = 18
+      Top = 24
+      Width = 175
+      Caption = 'Allow Python Script To Run'
+      OnChange = CheckBox1Change
+      TabOrder = 12
+    end
   end
   object PanelConnections: TPanel
     Left = 0
