--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/dualcontroller_unit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/dualcontroller_unit.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 245
+  Left = 508
   Height = 633
-  Top = 112
+  Top = 118
   Width = 733
   BorderStyle = bsSingle
   Caption = 'Form1'
@@ -9,7 +9,7 @@ object Form1: TForm1
   ClientWidth = 733
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
-  LCLVersion = '2.0.6.0'
+  LCLVersion = '2.0.11.0'
   object PanelThrottle1: TPanel
     Left = 0
     Height = 583
@@ -39,17 +39,17 @@ object Form1: TForm1
       end
       object Label2: TLabel
         Left = 119
-        Height = 15
+        Height = 16
         Top = 6
-        Width = 46
+        Width = 53
         Caption = 'NodeID: '
         ParentColor = False
       end
       object Label3: TLabel
         Left = 120
-        Height = 15
+        Height = 16
         Top = 28
-        Width = 42
+        Width = 49
         Caption = 'AliasID: '
         ParentColor = False
       end
@@ -74,8 +74,8 @@ object Form1: TForm1
     end
     object StatusBarThrottle1: TStatusBar
       Left = 1
-      Height = 23
-      Top = 559
+      Height = 18
+      Top = 564
       Width = 350
       Panels = <      
         item
@@ -86,11 +86,11 @@ object Form1: TForm1
     end
     object PanelThrottleFace1: TPanel
       Left = 1
-      Height = 510
+      Height = 515
       Top = 49
       Width = 350
       Align = alClient
-      ClientHeight = 510
+      ClientHeight = 515
       ClientWidth = 350
       TabOrder = 2
       object PanelThrottleAssign1: TPanel
@@ -104,7 +104,7 @@ object Form1: TForm1
         TabOrder = 0
         object EditThrottleAddress1: TEdit
           Left = 120
-          Height = 23
+          Height = 22
           Top = 10
           Width = 96
           TabOrder = 0
@@ -112,17 +112,17 @@ object Form1: TForm1
         end
         object Label6: TLabel
           Left = 16
-          Height = 15
+          Height = 16
           Top = 10
-          Width = 69
+          Width = 81
           Caption = 'DCC Address'
           ParentColor = False
         end
         object CheckBoxThrottleLongAddress1: TCheckBox
           Left = 120
-          Height = 19
+          Height = 18
           Top = 45
-          Width = 92
+          Width = 100
           Caption = 'Long Address'
           TabOrder = 1
         end
@@ -140,8 +140,8 @@ object Form1: TForm1
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclLeftToRightThenTopToBottom
           ChildSizing.ControlsPerLine = 1
-          ClientHeight = 67
-          ClientWidth = 109
+          ClientHeight = 69
+          ClientWidth = 105
           ItemIndex = 0
           Items.Strings = (
             '14 Step'
@@ -160,9 +160,9 @@ object Form1: TForm1
         end
         object CheckBoxThrottleTakeover1: TCheckBox
           Left = 8
-          Height = 19
+          Height = 18
           Top = 64
-          Width = 153
+          Width = 166
           Caption = 'Ask to allow throttle steal'
           TabOrder = 3
         end
@@ -178,11 +178,11 @@ object Form1: TForm1
       end
       object PanelThrottleKeypad1: TPanel
         Left = 1
-        Height = 205
+        Height = 210
         Top = 304
         Width = 348
         Align = alClient
-        ClientHeight = 205
+        ClientHeight = 210
         ClientWidth = 348
         TabOrder = 1
         object SpeedButtonFunction0: TSpeedButton
@@ -347,9 +347,9 @@ object Form1: TForm1
         end
         object LabelThrottleSpeed1: TLabel
           Left = 296
-          Height = 32
+          Height = 28
           Top = 170
-          Width = 14
+          Width = 16
           Caption = '0'
           Font.Height = -24
           Font.Style = [fsBold]
@@ -382,7 +382,7 @@ object Form1: TForm1
         object ButtonBuildConstist1: TButton
           Left = 8
           Height = 25
-          Top = 176
+          Top = 160
           Width = 136
           Caption = 'Build Consist'
           OnClick = ButtonBuildConstist1Click
@@ -390,32 +390,32 @@ object Form1: TForm1
         end
         object Label8: TLabel
           Left = 8
-          Height = 15
-          Top = 8
-          Width = 69
+          Height = 16
+          Top = 1
+          Width = 81
           Caption = 'DCC Address'
           ParentColor = False
         end
         object EditConsistAddress1: TEdit
           Left = 96
-          Height = 23
-          Top = 8
+          Height = 22
+          Top = 2
           Width = 48
           TabOrder = 2
           Text = '455'
         end
         object CheckBoxConsistAddress1: TCheckBox
           Left = 16
-          Height = 19
-          Top = 32
-          Width = 92
+          Height = 18
+          Top = 24
+          Width = 100
           Caption = 'Long Address'
           TabOrder = 3
         end
         object RadioGroupConstistSpeedStep1: TRadioGroup
           Left = 8
-          Height = 106
-          Top = 64
+          Height = 72
+          Top = 48
           Width = 96
           AutoFill = True
           Caption = 'Speed Steps'
@@ -426,8 +426,8 @@ object Form1: TForm1
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclLeftToRightThenTopToBottom
           ChildSizing.ControlsPerLine = 1
-          ClientHeight = 86
-          ClientWidth = 92
+          ClientHeight = 54
+          ClientWidth = 88
           ItemIndex = 0
           Items.Strings = (
             '14 Step'
@@ -460,6 +460,31 @@ object Form1: TForm1
           OnClick = SpeedButtonConsistSubtract1Click
           ParentFont = False
         end
+        object CheckBoxForwardF0_1: TCheckBox
+          Left = 8
+          Height = 18
+          Top = 126
+          Width = 86
+          Caption = 'Forward F0'
+          TabOrder = 5
+        end
+        object CheckBoxForwardFn_1: TCheckBox
+          Left = 8
+          Height = 18
+          Top = 144
+          Width = 86
+          Caption = 'Forward Fn'
+          TabOrder = 6
+        end
+        object ButtonReleaseConsist1: TButton
+          Left = 8
+          Height = 25
+          Top = 183
+          Width = 136
+          Caption = 'Release Consist'
+          OnClick = ButtonBuildConstist1Click
+          TabOrder = 7
+        end
       end
     end
   end
@@ -474,7 +499,7 @@ object Form1: TForm1
     TabOrder = 1
     object EditCommandStationIPAddress: TEdit
       Left = 232
-      Height = 23
+      Height = 22
       Top = 9
       Width = 136
       TabOrder = 0
@@ -482,9 +507,9 @@ object Form1: TForm1
     end
     object Label1: TLabel
       Left = 32
-      Height = 15
+      Height = 16
       Top = 15
-      Width = 155
+      Width = 177
       Caption = 'Command Station IP Address'
       ParentColor = False
     end
@@ -518,17 +543,17 @@ object Form1: TForm1
       end
       object Label4: TLabel
         Left = 119
-        Height = 15
+        Height = 16
         Top = 6
-        Width = 46
+        Width = 53
         Caption = 'NodeID: '
         ParentColor = False
       end
       object Label5: TLabel
         Left = 120
-        Height = 15
+        Height = 16
         Top = 28
-        Width = 42
+        Width = 49
         Caption = 'AliasID: '
         ParentColor = False
       end
@@ -553,8 +578,8 @@ object Form1: TForm1
     end
     object StatusBarThrottle2: TStatusBar
       Left = 1
-      Height = 23
-      Top = 559
+      Height = 18
+      Top = 564
       Width = 366
       Panels = <      
         item
@@ -565,11 +590,11 @@ object Form1: TForm1
     end
     object PanelThrottleFace2: TPanel
       Left = 1
-      Height = 510
+      Height = 515
       Top = 49
       Width = 366
       Align = alClient
-      ClientHeight = 510
+      ClientHeight = 515
       ClientWidth = 366
       TabOrder = 2
       object PanelThrottleAssign2: TPanel
@@ -583,7 +608,7 @@ object Form1: TForm1
         TabOrder = 0
         object EditThrottleAddress2: TEdit
           Left = 120
-          Height = 23
+          Height = 22
           Top = 10
           Width = 96
           TabOrder = 0
@@ -591,17 +616,17 @@ object Form1: TForm1
         end
         object Label7: TLabel
           Left = 16
-          Height = 15
+          Height = 16
           Top = 10
-          Width = 69
+          Width = 81
           Caption = 'DCC Address'
           ParentColor = False
         end
         object CheckBoxThrottleLongAddress2: TCheckBox
           Left = 120
-          Height = 19
+          Height = 18
           Top = 45
-          Width = 92
+          Width = 100
           Caption = 'Long Address'
           TabOrder = 1
         end
@@ -619,8 +644,8 @@ object Form1: TForm1
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclLeftToRightThenTopToBottom
           ChildSizing.ControlsPerLine = 1
-          ClientHeight = 67
-          ClientWidth = 109
+          ClientHeight = 69
+          ClientWidth = 105
           ItemIndex = 0
           Items.Strings = (
             '14 Step'
@@ -639,20 +664,20 @@ object Form1: TForm1
         end
         object CheckBoxThrottleTakeover2: TCheckBox
           Left = 8
-          Height = 19
+          Height = 18
           Top = 64
-          Width = 153
+          Width = 166
           Caption = 'Ask to allow throttle steal'
           TabOrder = 3
         end
       end
       object PanelThrottleKeypad2: TPanel
         Left = 1
-        Height = 205
+        Height = 210
         Top = 304
         Width = 364
         Align = alClient
-        ClientHeight = 205
+        ClientHeight = 210
         ClientWidth = 364
         TabOrder = 1
         object SpeedButtonFunction12: TSpeedButton
@@ -817,9 +842,9 @@ object Form1: TForm1
         end
         object LabelThrottleSpeed2: TLabel
           Left = 298
-          Height = 32
+          Height = 28
           Top = 170
-          Width = 14
+          Width = 16
           Caption = '0'
           Font.Height = -24
           Font.Style = [fsBold]
@@ -843,20 +868,21 @@ object Form1: TForm1
           Width = 195
           Align = alRight
           TabOrder = 0
+          OnDeletion = TreeViewConsistWizard2Deletion
           OnSelectionChanged = TreeViewConsistWizard2SelectionChanged
         end
         object Label9: TLabel
           Left = 5
-          Height = 15
-          Top = 8
-          Width = 69
+          Height = 16
+          Top = 2
+          Width = 81
           Caption = 'DCC Address'
           ParentColor = False
         end
         object EditConsistAddress2: TEdit
           Left = 96
-          Height = 23
-          Top = 8
+          Height = 22
+          Top = 2
           Width = 48
           TabOrder = 1
           Text = '455'
@@ -887,16 +913,16 @@ object Form1: TForm1
         end
         object CheckBoxConsistAddress2: TCheckBox
           Left = 16
-          Height = 19
-          Top = 32
-          Width = 92
+          Height = 18
+          Top = 24
+          Width = 100
           Caption = 'Long Address'
           TabOrder = 2
         end
         object RadioGroupConstistSpeedStep2: TRadioGroup
           Left = 5
-          Height = 106
-          Top = 64
+          Height = 72
+          Top = 46
           Width = 97
           AutoFill = True
           Caption = 'Speed Steps'
@@ -907,8 +933,8 @@ object Form1: TForm1
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclLeftToRightThenTopToBottom
           ChildSizing.ControlsPerLine = 1
-          ClientHeight = 86
-          ClientWidth = 93
+          ClientHeight = 54
+          ClientWidth = 89
           ItemIndex = 0
           Items.Strings = (
             '14 Step'
@@ -920,18 +946,43 @@ object Form1: TForm1
         object ButtonBuildConstist2: TButton
           Left = 8
           Height = 25
-          Top = 176
+          Top = 160
           Width = 139
           Caption = 'Build Consist'
           OnClick = ButtonBuildConstist2Click
           TabOrder = 4
         end
+        object CheckBoxForwardFn_2: TCheckBox
+          Left = 8
+          Height = 18
+          Top = 144
+          Width = 86
+          Caption = 'Forward Fn'
+          TabOrder = 5
+        end
+        object CheckBoxForwardF0_2: TCheckBox
+          Left = 8
+          Height = 18
+          Top = 126
+          Width = 86
+          Caption = 'Forward F0'
+          TabOrder = 6
+        end
+        object ButtonReleaseConsist2: TButton
+          Left = 8
+          Height = 25
+          Top = 183
+          Width = 140
+          Caption = 'Release Consist'
+          OnClick = ButtonBuildConstist1Click
+          TabOrder = 7
+        end
       end
     end
   end
   object ImageList: TImageList
-    left = 396
-    top = 9
+    Left = 396
+    Top = 9
     Bitmap = {
       4C69070000001000000010000000FFFFFF00F7F7FEFFF7F7FEFFFFFFFF00FFFF
       FF00F7F7FEFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
