--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/dualcontroller_unit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/dualcontroller_unit.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 245
+  Left = 489
   Height = 633
-  Top = 112
+  Top = 146
   Width = 733
   BorderStyle = bsSingle
   Caption = 'Form1'
@@ -165,15 +165,6 @@ object Form1: TForm1
           Width = 166
           Caption = 'Ask to allow throttle steal'
           TabOrder = 3
-        end
-        object Button1: TButton
-          Left = 152
-          Height = 25
-          Top = 70
-          Width = 75
-          Caption = 'Button1'
-          OnClick = Button1Click
-          TabOrder = 4
         end
       end
       object PanelThrottleKeypad1: TPanel
@@ -366,99 +357,138 @@ object Form1: TForm1
         ClientHeight = 208
         ClientWidth = 348
         TabOrder = 2
-        object TreeViewConsistWizard1: TTreeView
-          Left = 152
+        object PanelConsistEditor1: TPanel
+          Left = 1
           Height = 206
           Top = 1
-          Width = 195
-          Align = alRight
-          HideSelection = False
-          Images = ImageList
+          Width = 167
+          Align = alClient
+          ClientHeight = 206
+          ClientWidth = 167
           TabOrder = 0
-          OnDeletion = TreeViewConsistWizard1Deletion
-          OnSelectionChanged = TreeViewConsistWizard1SelectionChanged
-          Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
+          object Label8: TLabel
+            Left = 7
+            Height = 16
+            Top = 1
+            Width = 81
+            Caption = 'DCC Address'
+            ParentColor = False
+          end
+          object EditConsistAddress1: TEdit
+            Left = 95
+            Height = 22
+            Top = 2
+            Width = 48
+            TabOrder = 0
+            Text = '455'
+          end
+          object CheckBoxConsistAddress1: TCheckBox
+            Left = 16
+            Height = 18
+            Top = 24
+            Width = 100
+            Caption = 'Long Address'
+            TabOrder = 1
+          end
+          object RadioGroupConstistSpeedStep1: TRadioGroup
+            Left = 7
+            Height = 74
+            Top = 48
+            Width = 96
+            AutoFill = True
+            Caption = 'Speed Steps'
+            ChildSizing.LeftRightSpacing = 6
+            ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+            ChildSizing.EnlargeVertical = crsHomogenousChildResize
+            ChildSizing.ShrinkHorizontal = crsScaleChilds
+            ChildSizing.ShrinkVertical = crsScaleChilds
+            ChildSizing.Layout = cclLeftToRightThenTopToBottom
+            ChildSizing.ControlsPerLine = 1
+            ClientHeight = 56
+            ClientWidth = 88
+            ItemIndex = 0
+            Items.Strings = (
+              '14 Step'
+              '28 Step'
+              '128 Step'
+            )
+            TabOrder = 2
+          end
+          object SpeedButtonConsistTrainAdd1: TSpeedButton
+            Left = 109
+            Height = 34
+            Top = 56
+            Width = 34
+            Font.Height = -27
+            Font.Style = [fsBold]
+            Images = ImageList
+            ImageIndex = 3
+            OnClick = SpeedButtonConsistTrainAdd1Click
+            ParentFont = False
+          end
+          object SpeedButtonConsistSubtract1: TSpeedButton
+            Left = 109
+            Height = 34
+            Top = 88
+            Width = 34
+            Font.Height = -27
+            Font.Style = [fsBold]
+            Images = ImageList
+            ImageIndex = 4
+            OnClick = SpeedButtonConsistSubtract1Click
+            ParentFont = False
+          end
+          object ButtonBuildConstist1: TButton
+            Left = 7
+            Height = 25
+            Top = 128
+            Width = 136
+            Caption = 'Build Consist'
+            OnClick = ButtonBuildConstist1Click
+            TabOrder = 3
+          end
         end
-        object ButtonBuildConstist1: TButton
-          Left = 7
-          Height = 25
-          Top = 128
-          Width = 136
-          Caption = 'Build Consist'
-          OnClick = ButtonBuildConstist1Click
-          TabOrder = 1
-        end
-        object Label8: TLabel
-          Left = 7
-          Height = 16
+        object PageControlConsists1: TPageControl
+          Left = 168
+          Height = 206
           Top = 1
-          Width = 81
-          Caption = 'DCC Address'
-          ParentColor = False
-        end
-        object EditConsistAddress1: TEdit
-          Left = 95
-          Height = 22
-          Top = 2
-          Width = 48
-          TabOrder = 2
-          Text = '455'
-        end
-        object CheckBoxConsistAddress1: TCheckBox
-          Left = 16
-          Height = 18
-          Top = 24
-          Width = 100
-          Caption = 'Long Address'
-          TabOrder = 3
-        end
-        object RadioGroupConstistSpeedStep1: TRadioGroup
-          Left = 7
-          Height = 74
-          Top = 48
-          Width = 96
-          AutoFill = True
-          Caption = 'Speed Steps'
-          ChildSizing.LeftRightSpacing = 6
-          ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-          ChildSizing.EnlargeVertical = crsHomogenousChildResize
-          ChildSizing.ShrinkHorizontal = crsScaleChilds
-          ChildSizing.ShrinkVertical = crsScaleChilds
-          ChildSizing.Layout = cclLeftToRightThenTopToBottom
-          ChildSizing.ControlsPerLine = 1
-          ClientHeight = 56
-          ClientWidth = 88
-          ItemIndex = 0
-          Items.Strings = (
-            '14 Step'
-            '28 Step'
-            '128 Step'
-          )
-          TabOrder = 4
-        end
-        object SpeedButtonConsistTrainAdd1: TSpeedButton
-          Left = 109
-          Height = 34
-          Top = 56
-          Width = 34
-          Font.Height = -27
-          Font.Style = [fsBold]
-          Images = ImageList
-          ImageIndex = 3
-          OnClick = SpeedButtonConsistTrainAdd1Click
-          ParentFont = False
-        end
-        object SpeedButtonConsistSubtract1: TSpeedButton
-          Left = 109
-          Height = 34
-          Top = 88
-          Width = 34
-          Font.Height = -27
-          Font.Style = [fsBold]
-          Images = ImageList
-          ImageIndex = 4
-          OnClick = SpeedButtonConsistSubtract1Click
-          ParentFont = False
+          Width = 179
+          ActivePage = TabSheetConsistNew1
+          Align = alRight
+          TabIndex = 0
+          TabOrder = 1
+          OnChange = PageControlConsists1Change
+          object TabSheetConsistNew1: TTabSheet
+            Caption = 'New'
+            ClientHeight = 176
+            ClientWidth = 173
+            object TreeViewConsistWizard1: TTreeView
+              Left = -22
+              Height = 176
+              Top = 0
+              Width = 195
+              Align = alRight
+              HideSelection = False
+              Images = ImageList
+              TabOrder = 0
+              OnDeletion = TreeViewConsistWizard1Deletion
+              OnSelectionChanged = TreeViewConsistWizard1SelectionChanged
+              Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
+            end
+          end
+          object TabSheetConsists1: TTabSheet
+            Caption = 'Consists'
+            ClientHeight = 176
+            ClientWidth = 173
+            object TreeViewConsists1: TTreeView
+              Left = 0
+              Height = 176
+              Top = 0
+              Width = 173
+              Align = alClient
+              TabOrder = 0
+            end
+          end
         end
       end
     end
@@ -836,95 +866,134 @@ object Form1: TForm1
         ClientHeight = 208
         ClientWidth = 364
         TabOrder = 2
-        object TreeViewConsistWizard2: TTreeView
-          Left = 168
+        object PageControlConsists2: TPageControl
+          Left = 163
           Height = 206
           Top = 1
-          Width = 195
+          Width = 200
+          ActivePage = TabSheetConsistNew2
           Align = alRight
+          TabIndex = 0
           TabOrder = 0
-          OnSelectionChanged = TreeViewConsistWizard2SelectionChanged
+          OnChange = PageControlConsists2Change
+          object TabSheetConsistNew2: TTabSheet
+            Caption = 'New'
+            ClientHeight = 176
+            ClientWidth = 194
+            object TreeViewConsistWizard2: TTreeView
+              Left = -1
+              Height = 176
+              Top = 0
+              Width = 195
+              Align = alRight
+              TabOrder = 0
+              OnSelectionChanged = TreeViewConsistWizard2SelectionChanged
+            end
+          end
+          object TabSheetConsists2: TTabSheet
+            Caption = 'Consists'
+            ClientHeight = 176
+            ClientWidth = 194
+            object TreeViewConsists2: TTreeView
+              Left = 0
+              Height = 176
+              Top = 0
+              Width = 194
+              Align = alClient
+              TabOrder = 0
+            end
+          end
         end
-        object Label9: TLabel
-          Left = 5
-          Height = 16
-          Top = 2
-          Width = 81
-          Caption = 'DCC Address'
-          ParentColor = False
-        end
-        object EditConsistAddress2: TEdit
-          Left = 96
-          Height = 22
-          Top = 2
-          Width = 48
+        object PanelConsistEditor2: TPanel
+          Left = 1
+          Height = 206
+          Top = 1
+          Width = 162
+          Align = alClient
+          ClientHeight = 206
+          ClientWidth = 162
           TabOrder = 1
-          Text = '455'
-        end
-        object SpeedButtonConstistTrainAdd2: TSpeedButton
-          Left = 109
-          Height = 34
-          Top = 56
-          Width = 34
-          Font.Height = -27
-          Font.Style = [fsBold]
-          Images = ImageList
-          ImageIndex = 3
-          OnClick = SpeedButtonConstistTrainAdd2Click
-          ParentFont = False
-        end
-        object SpeedButtonConsistSubtract2: TSpeedButton
-          Left = 109
-          Height = 34
-          Top = 88
-          Width = 34
-          Font.Height = -27
-          Font.Style = [fsBold]
-          Images = ImageList
-          ImageIndex = 4
-          OnClick = SpeedButtonConsistSubtract2Click
-          ParentFont = False
-        end
-        object CheckBoxConsistAddress2: TCheckBox
-          Left = 16
-          Height = 18
-          Top = 24
-          Width = 100
-          Caption = 'Long Address'
-          TabOrder = 2
-        end
-        object RadioGroupConstistSpeedStep2: TRadioGroup
-          Left = 5
-          Height = 74
-          Top = 48
-          Width = 97
-          AutoFill = True
-          Caption = 'Speed Steps'
-          ChildSizing.LeftRightSpacing = 6
-          ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-          ChildSizing.EnlargeVertical = crsHomogenousChildResize
-          ChildSizing.ShrinkHorizontal = crsScaleChilds
-          ChildSizing.ShrinkVertical = crsScaleChilds
-          ChildSizing.Layout = cclLeftToRightThenTopToBottom
-          ChildSizing.ControlsPerLine = 1
-          ClientHeight = 56
-          ClientWidth = 89
-          ItemIndex = 0
-          Items.Strings = (
-            '14 Step'
-            '28 Step'
-            '128 Step'
-          )
-          TabOrder = 3
-        end
-        object ButtonBuildConstist2: TButton
-          Left = 5
-          Height = 25
-          Top = 128
-          Width = 139
-          Caption = 'Build Consist'
-          OnClick = ButtonBuildConstist2Click
-          TabOrder = 4
+          object ButtonBuildConstist2: TButton
+            Left = 5
+            Height = 25
+            Top = 128
+            Width = 139
+            Caption = 'Build Consist'
+            OnClick = ButtonBuildConstist2Click
+            TabOrder = 0
+          end
+          object SpeedButtonConsistSubtract2: TSpeedButton
+            Left = 109
+            Height = 34
+            Top = 88
+            Width = 34
+            Font.Height = -27
+            Font.Style = [fsBold]
+            Images = ImageList
+            ImageIndex = 4
+            OnClick = SpeedButtonConsistSubtract2Click
+            ParentFont = False
+          end
+          object SpeedButtonConstistTrainAdd2: TSpeedButton
+            Left = 109
+            Height = 34
+            Top = 56
+            Width = 34
+            Font.Height = -27
+            Font.Style = [fsBold]
+            Images = ImageList
+            ImageIndex = 3
+            OnClick = SpeedButtonConstistTrainAdd2Click
+            ParentFont = False
+          end
+          object RadioGroupConstistSpeedStep2: TRadioGroup
+            Left = 5
+            Height = 74
+            Top = 48
+            Width = 97
+            AutoFill = True
+            Caption = 'Speed Steps'
+            ChildSizing.LeftRightSpacing = 6
+            ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+            ChildSizing.EnlargeVertical = crsHomogenousChildResize
+            ChildSizing.ShrinkHorizontal = crsScaleChilds
+            ChildSizing.ShrinkVertical = crsScaleChilds
+            ChildSizing.Layout = cclLeftToRightThenTopToBottom
+            ChildSizing.ControlsPerLine = 1
+            ClientHeight = 56
+            ClientWidth = 89
+            ItemIndex = 0
+            Items.Strings = (
+              '14 Step'
+              '28 Step'
+              '128 Step'
+            )
+            TabOrder = 1
+          end
+          object CheckBoxConsistAddress2: TCheckBox
+            Left = 16
+            Height = 18
+            Top = 24
+            Width = 100
+            Caption = 'Long Address'
+            TabOrder = 2
+          end
+          object EditConsistAddress2: TEdit
+            Left = 96
+            Height = 22
+            Top = 2
+            Width = 48
+            TabOrder = 3
+            Text = '455'
+          end
+          object Label9: TLabel
+            Left = 5
+            Height = 16
+            Top = 2
+            Width = 81
+            Caption = 'DCC Address'
+            ParentColor = False
+          end
         end
       end
     end
