Fundamental Controller State-machine functional and Trains reply as being added as Listeners.  Need to test the next level.  A bit of refactoring how the AliasMapping tables are handled in the Actions.  Centralized the code for doing that in the base Action to be less error prone.

--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/dualcontroller_unit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/dualcontroller_unit.lfm
@@ -574,6 +574,15 @@ object Form1: TForm1
       Caption = 'Command Station IP Address'
       ParentColor = False
     end
+    object ButtonActionObjectCount: TButton
+      Left = 465
+      Height = 22
+      Top = 13
+      Width = 151
+      Caption = 'Action Objects = 0'
+      OnClick = ButtonActionObjectCountClick
+      TabOrder = 1
+    end
   end
   object PanelThrottle2: TPanel
     Left = 370
