--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
@@ -11,7 +11,7 @@ object FormTrainCommander: TFormTrainCommander
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnShow = FormShow
-  LCLVersion = '2.0.11.0'
+  LCLVersion = '2.0.6.0'
   object PanelDetails: TPanel
     Left = 0
     Height = 120
@@ -23,9 +23,9 @@ object FormTrainCommander: TFormTrainCommander
     TabOrder = 0
     object CheckBoxAutoConnect: TCheckBox
       Left = 192
-      Height = 18
+      Height = 19
       Top = 8
-      Width = 156
+      Width = 145
       Caption = 'AutoConnect at Startup'
       TabOrder = 0
     end
@@ -49,9 +49,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxLoopBackIP: TCheckBox
       Left = 192
-      Height = 18
+      Height = 19
       Top = 24
-      Width = 67
+      Width = 61
       Caption = 'Local IP'
       TabOrder = 3
     end
@@ -91,9 +91,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxLogMessages: TCheckBox
       Left = 440
-      Height = 18
+      Height = 19
       Top = 72
-      Width = 104
+      Width = 94
       Caption = 'Log Messages'
       Checked = True
       State = cbChecked
@@ -101,9 +101,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxUseSyncronize: TCheckBox
       Left = 384
-      Height = 18
+      Height = 19
       Top = 8
-      Width = 192
+      Width = 174
       Caption = 'Use Syncronize in the threads'
       Checked = True
       State = cbChecked
@@ -111,13 +111,12 @@ object FormTrainCommander: TFormTrainCommander
     end
     object ComboBoxComPorts: TComboBox
       Left = 376
-      Height = 20
+      Height = 23
       Top = 47
       Width = 284
-      ItemHeight = 26
+      ItemHeight = 15
       Style = csDropDownList
       TabOrder = 6
-      Text = '0'
     end
     object ButtonManualConnectComPort: TButton
       Left = 256
@@ -139,9 +138,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxDetailedLog: TCheckBox
       Left = 443
-      Height = 18
+      Height = 19
       Top = 93
-      Width = 94
+      Width = 86
       Caption = 'Detailed Log'
       ParentShowHint = False
       ShowHint = True
@@ -167,9 +166,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBox1: TCheckBox
       Left = 384
-      Height = 18
+      Height = 19
       Top = 24
-      Width = 175
+      Width = 164
       Caption = 'Allow Python Script To Run'
       Checked = True
       OnChange = CheckBox1Change
@@ -180,7 +179,7 @@ object FormTrainCommander: TFormTrainCommander
   object PanelConnections: TPanel
     Left = 0
     Height = 102
-    Top = 445
+    Top = 440
     Width = 1181
     Align = alBottom
     ClientHeight = 102
@@ -208,21 +207,21 @@ object FormTrainCommander: TFormTrainCommander
     Cursor = crVSplit
     Left = 0
     Height = 9
-    Top = 337
+    Top = 332
     Width = 1181
     Align = alBottom
     ResizeAnchor = akBottom
   end
   object SplitterTrains: TSplitter
     Left = 267
-    Height = 217
+    Height = 212
     Top = 120
     Width = 5
   end
   object StatusBarMain: TStatusBar
     Left = 0
-    Height = 18
-    Top = 547
+    Height = 23
+    Top = 542
     Width = 1181
     Panels = <    
       item
@@ -241,17 +240,17 @@ object FormTrainCommander: TFormTrainCommander
   end
   object PanelTrains: TPanel
     Left = 0
-    Height = 217
+    Height = 212
     Top = 120
     Width = 267
     Align = alLeft
     Caption = 'PanelTrains'
-    ClientHeight = 217
+    ClientHeight = 212
     ClientWidth = 267
     TabOrder = 5
     object ListViewTrains: TListView
       Left = 1
-      Height = 184
+      Height = 179
       Top = 32
       Width = 265
       Align = alClient
@@ -286,18 +285,17 @@ object FormTrainCommander: TFormTrainCommander
   end
   object MemoLog: TMemo
     Left = 272
-    Height = 217
+    Height = 212
     Top = 120
     Width = 909
     Align = alClient
-    Lines.Strings = (    )
     ScrollBars = ssVertical
     TabOrder = 6
   end
   object MemoComPort: TMemo
     Left = 0
     Height = 90
-    Top = 346
+    Top = 341
     Width = 1181
     Align = alBottom
     Lines.Strings = (
@@ -310,14 +308,14 @@ object FormTrainCommander: TFormTrainCommander
     Cursor = crVSplit
     Left = 0
     Height = 9
-    Top = 436
+    Top = 431
     Width = 1181
     Align = alBottom
     ResizeAnchor = akBottom
   end
   object ImageListMain: TImageList
-    Left = 72
-    Top = 168
+    left = 72
+    top = 168
     Bitmap = {
       4C69200000001000000010000000000000000000000000000000000000000000
       0000000000000000000000000000000000000000000000000000000000000000
@@ -1349,7 +1347,7 @@ object FormTrainCommander: TFormTrainCommander
   object TimerIncomingMessagePump: TTimer
     Interval = 1
     OnTimer = TimerIncomingMessagePumpTimer
-    Left = 568
-    Top = 32
+    left = 568
+    top = 32
   end
 end
